traefik/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dokuwiki-ingress
  namespace: default

spec:
  rules:
    - host: k8s01
      http:
        paths:
          - path: /wiki
            pathType: Prefix
            backend:
              service:
                name: traefik-web-service
                port:
                  number: 80
          - path: /
            backend:
              service:
                name: traefik-dashboard-service
                port:
                  number: 8080
